--- a/src/app/core/app.component.html
+++ b/src/app/core/app.component.html
@@ -20,7 +20,7 @@
             nz-tooltip
             nzPlacement="right"
             (click)="goToDetailMenu(item)"
-            [nzSelected]="item.checkStatus"
+            [nzSelected]="item.url === currentPath"
           >
             <span>{{item.title}}</span>
           </li>
@@ -49,14 +49,18 @@
             <nz-tag [ngClass]="item.url === currentPath ? 'active' : ''"
                     [nzMode]="item.url === '/pages/home' ? 'default' : 'closeable'"
                     (click)="chooseTag(item)"
+                    (nzOnClose)="cutTagList(item.url)"
             >
               {{item.title}}
             </nz-tag>
             <nz-dropdown-menu #menu="nzDropdownMenu">
               <ul nz-menu>
-                <li nz-menu-item *ngIf="item.url !== '/pages/home'">关闭当前</li>
-                <li nz-menu-item>关闭其他</li>
-                <li nz-menu-item>关闭全部</li>
+                <li nz-menu-item
+                    *ngIf="item.url !== '/pages/home'"
+                    (click)="cutTagList(item.url)"
+                >关闭当前</li>
+                <li nz-menu-item (click)="cutOtherTagList(item.url)">关闭其他</li>
+                <li nz-menu-item (click)="emptyTagList()">关闭全部</li>
               </ul>
             </nz-dropdown-menu>
           </div>
