--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,10 @@
 <button (click)="increment()">增加Increment</button>
-<div>Current Count: {{ count }}</div>
+<div>Current Count: {{ countNumber }}</div>
+<div>Current tagList:
+  <span *ngFor="let item of tagList">
+    {{item.path}}
+  </span>
+</div>
 <button (click)="decrement()">减少Decrement</button>
 
 <button (click)="reset()">Reset Counter</button>
