完成请求拦截和响应拦截配置

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,1 @@
-<button (click)="increment()">增加Increment</button>
-<div>Current Count: {{ countNumber }}</div>
-<div>Current tagList:
-  <span *ngFor="let item of tagList">
-    {{item.path}}
-  </span>
-</div>
-<button (click)="decrement()">减少Decrement</button>
-
-<button (click)="reset()">Reset Counter</button>
+<div>Current Count</div>
