--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,1 +1,86 @@
-<router-outlet></router-outlet>
+<nz-layout class="app-layout">
+  <nz-sider class="menu-sidebar"
+            nzCollapsible
+            nzWidth="256px"
+            nzBreakpoint="md"
+            [(nzCollapsed)]="isCollapsed"
+            [nzTrigger]="null">
+    <div class="sidebar-logo">
+      <a href="https://ng.ant.design/" target="_blank">
+        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+        <h1>Ant Design Of Angular</h1>
+      </a>
+    </div>
+    <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
+      <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
+        <ul>
+          <li
+            *ngFor="let item of menuList"
+            nz-menu-item
+            nz-tooltip
+            nzPlacement="right"
+            (click)="goToDetailMenu(item)"
+            [nzSelected]="item.url === currentPath"
+          >
+            <span>{{item.title}}</span>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nz-sider>
+  <nz-layout>
+    <nz-header>
+      <div class="app-header">
+        <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
+            <i class="trigger"
+               nz-icon
+               [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
+            ></i>
+        </span>
+        <a nz-dropdown [nzDropdownMenu]="menu">
+          系统信息
+          <i nz-icon nzType="down"></i>
+        </a>
+        <nz-dropdown-menu #menu="nzDropdownMenu">
+          <ul nz-menu>
+            <li nz-menu-item>个人中心</li>
+            <li nz-menu-item (click)="logOut()">退出登录</li>
+          </ul>
+        </nz-dropdown-menu>
+      </div>
+    </nz-header>
+    <nz-content>
+      <div class="tags-container">
+        <div class="tags-box">
+          <div class="tag-item"
+               *ngFor="let item of tagList"
+               (contextmenu)="contextMenu($event, menu)"
+          >
+            <nz-tag [ngClass]="item.url === currentPath ? 'active' : ''"
+                    [nzMode]="item.url === '/pages/home' ? 'default' : 'closeable'"
+                    (click)="chooseTag(item)"
+                    (nzOnClose)="cutTagList(item.url)"
+            >
+              {{item.title}}
+            </nz-tag>
+            <nz-dropdown-menu #menu="nzDropdownMenu">
+              <ul nz-menu>
+                <li nz-menu-item
+                    *ngIf="item.url !== '/pages/home'"
+                    (click)="cutTagList(item.url)"
+                >关闭当前</li>
+                <li nz-menu-item (click)="cutOtherTagList(item.url)">关闭其他</li>
+                <li nz-menu-item (click)="emptyTagList()">关闭全部</li>
+              </ul>
+            </nz-dropdown-menu>
+          </div>
+        </div>
+      </div>
+      <div class="routDiv">
+        <div class="inner-content">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </nz-content>
+  </nz-layout>
+</nz-layout>
