--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,9 +14,16 @@
         </nz-form-control>
       </nz-form-item >
       <nz-form-item>
+        <nz-form-label [nzSpan]="6">验证码</nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <input nz-input type="text" [(ngModel)]="code" [ngModelOptions]="{standalone: true}">
+          <img [src]="randomImg" (click)="createPatch()" alt="验证码">
+        </nz-form-control>
+      </nz-form-item >
+      <nz-form-item>
         <nz-form-control [nzSm]="24">
           <div class="btn-box">
-            <button nz-button nzType="primary">登录</button>
+            <button nz-button nzType="primary" (click)="login()">登录</button>
             <button nz-button nzType="default">重置</button>
           </div>
         </nz-form-control>
