--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li nz-submenu [nzTitle]="item.title" *ngFor="let item of menuList">
+      <li nz-submenu [nzTitle]="item.title" nzIcon="dashboard" *ngFor="let item of menuList">
         <ul *ngFor="let ele of item.children">
           <li
             nz-menu-item
