新增路由组件复用功能：详情页根据参数不同打开多个标签

--- a/src/app/pages/course-manage/my-class/my-class.component.html
+++ b/src/app/pages/course-manage/my-class/my-class.component.html
@@ -1,1 +1,4 @@
 <input nz-input placeholder="classValue" [(ngModel)]="classValue" />
+<button (click)="showClassInfo(1)">跳转详情1</button>
+<button (click)="showClassInfo(2)">跳转详情2</button>
+<button (click)="showClassInfo(3)">跳转详情3</button>
