实现模块共享

--- a/src/app/pages/course-manage/classroom-manage/classroom-manage.component.html
+++ b/src/app/pages/course-manage/classroom-manage/classroom-manage.component.html
@@ -1,1 +1,2 @@
 <input nz-input placeholder="manageValue" [(ngModel)]="manageValue" />
+<app-draggable-item [drawingItem]="drawingItem" [activeId]="activeId"></app-draggable-item>
