--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -1,3 +1,4 @@
 <p>test works!</p>
 <button (click)="list()">list</button>
 <button (click)="page()">page</button>
+<app-draggable-item [drawingItem]="drawingItem" [activeId]="activeId"></app-draggable-item>
