--- a/src/app/pages/form-generator/form-generator.component.less
+++ b/src/app/pages/form-generator/form-generator.component.less
@@ -31,6 +31,9 @@
             cursor: move;
             border: 1px dashed #f6f7ff;
             border-radius: 3px;
+            i{
+              margin-right: 5px;
+            }
             &:hover{
               border: 1px dashed #787be8;
               color: #787be8;
@@ -47,6 +50,7 @@
     border-right: 1px solid #ccc;
     .drawing-board{
       height: 100%;
+      padding: 5px;
     }
   }
   .right-board{
